--- a/workshop01/package.json
+++ b/workshop01/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "nodemon": "^3.1.4",
+    "serve": "^14.2.3",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
     "webpack": "^5.93.0",
