--- a/workshop01/frontend/package.json
+++ b/workshop01/frontend/package.json
@@ -12,7 +12,8 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10"
+    "@types/react-dom": "^18.0.10",
+    "serve": "^14.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
